# Firefly

./: .gitignore  README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: 需求文档.md
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: category.rs  mod.rs  note.rs  settings.rs
src-tauri/src/models/: category.rs  category_order.rs  config.rs  mod.rs  note.rs
src-tauri/src/services/: category_service.rs  config_service.rs  mod.rs  note_service.rs
src/assets/style/: markdown.css  style.css  style.less
src/components/category/: CategoryForm.vue  CategoryItem.vue  CategoryList.vue  CategoryRenameModal.vue  index.ts
src/components/common/: Button.vue  ConfirmDialog.vue  ContextMenu.vue  ContextMenuItem.vue  Input.vue  Modal.vue  ToastContainer.vue  ToastItem.vue  index.ts
src/components/editor/: MarkdownEditor.vue  index.ts
src/components/layout/: AppLayout.vue  MainContent.vue  SidebarLeft.vue  SidebarMiddle.vue  index.ts
src/components/note/: NoteForm.vue  index.ts  (+3 more)
src/composables/: index.ts  useAutoSave.ts  useContextMenu.ts  useMarkdown.ts  useToast.ts  useUpdateChecker.ts
src/services/: categoryService.ts  index.ts  noteService.ts  settingsService.ts
src/stores/: category.ts  index.ts  note.ts  settings.ts  tag.ts  tree.ts  update.ts
src/types/: category.ts  index.ts  note.ts  settings.ts
src/utils/: frontmatter.ts
(+18 files in other folders)
